<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Novum Field</string>
    <string name="app_picture_dir">Novum_Field_Client</string>
    <string name="shared_pref_file">com.novumconcepts.fieldClient.preferenceFile</string>
    <string name="action_settings">Settings</string>
    <string name="camera_button_content_discription">cameraButtonContextDescription</string>
    <string name="camera_button_text">Take Pic</string>
    <string name="send_button_content_discription">sendButtonContentDescription</string>
    <string name="send_button_text">Send</string>
    <string name="camera_img_prefix">PRE_IMG_</string>
    <string name="camera_img_datetime_fmt">yyyyMMdd_HHmmss</string>
    <string name="destination">Destination</string>
    <string name="age">Age</string>
    <string name="complaint">Complaint</string>
    <string name="gender_text">Sex:</string>
    <string name="heart_rate_text">HR:</string>
    <string name="blood_pressure_text">BP:</string>
    <string name="respiration_text">RR:</string>
    <string name="gender_male_button">Male</string>
    <string name="gender_female_button">Female</string>
    <string name="heart_rate_absent_button">None</string>
    <string name="heart_rate_brady_button">Brady</string>
    <string name="heart_rate_normal_button">Norm</string>
    <string name="heart_rate_tachy_button">Tacky</string>
    <string name="respiration_absent_button">None</string>
    <string name="respiration_brady_button">Brady</string>
    <string name="respiration_normal_button">Norm</string>
    <string name="respiration_tachy_button">Tacky</string>
    <string name="blood_pressure_absent_button">None</string>
    <string name="blood_pressure_hypo_button">Hypo</string>
    <string name="blood_pressure_normal_button">Norm</string>
    <string name="blood_pressure_hyper_button">Hyper</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_apply_button_text">Save</string>
    <string name="settings_name_label">Name: </string>
    <string name="settings_agency_label">Agency: </string>
    <string name="settings_unit_label">Unit: </string>
    <string name="attachments">Attachments:</string>
    <string name="delete_comfirmation">Delete.</string>
    <string name="delete_question">Delete image?</string>
    <string name="app_ui">2</string>
    <string name="app_mac_addr">NovumField_android</string>
    <string name="novum_messagecenter_url">http://kevinscardina.com/novum/mc/api/public/fieldusers/sendMessage.php</string>

    <string name="dialog_error">ERROR.</string>
    <string name="sending_message">Sending, please wait...</string>
    <string name="sent_dialog_title_success">Sent.</string>
    <string name="sent_dialog_title_failure">ERROR: Message not Sent.</string>
    <string name="sent_dialog_message_prefix_success">Your pre-report was successfully uploaded to:\n\t</string>
    <string name="validate_message_destination_failure">A destination must be selected.</string>
    <string name="validate_message_complaint_failure">A complaint must be selected.</string>
    <string name="validate_message_settings_failure">Missing Field in Settings.\nPlease go to "Settings" and verify that the fields are set.</string>
    <string name="validate_settings_name_failure">A name must be entered.</string>
    <string name="validate_settings_agency_failure">An agency must be entered.</string>
    <string name="validate_settings_unit_failure">An unit must be entered.</string>

</resources>
